# Core

./: CMakeLists.txt  LICENSE  README.md  README_CN.md
cmake/: CoreConfig.cmake.in  cmake_uninstall.cmake.in
docs/tutorial/: 1. 总览.md  10. 服务管理器.md  11. 任务管理器.md  12. 界面管理器.md  2. 命令管理器.md  3. 配置管理器.md  4. 数据管理器.md  5. 事件管理器.md  6. 语言管理器.md  7. 日志管理器.md  8. 插件管理器.md  9. 资源管理器.md
include/: defCoreApi.hpp  lgcCore.hpp
include/Command/: cmdSetProperty.hpp  lgcCommandManager.hpp  lgcCompositeCommand.hpp  virCommandBase.hpp
include/Config/: lgcConfigManager.hpp
include/Core/: defCoreApi.hpp  lgcCore.hpp
include/Core/Command/: cmdSetProperty.hpp  lgcCommandManager.hpp  lgcCompositeCommand.hpp  virCommandBase.hpp
include/Core/Config/: lgcConfigManager.hpp
include/Core/Data/: lgcAttribute.hpp  lgcAttributeGroup.hpp  lgcDataManager.hpp  lgcElement.hpp  lgcElementGroup.hpp  virDocumentBase.hpp  virNodeBase.hpp  virNodeSetBase.hpp  virObjectBase.hpp  virProperty.hpp  virPropertyBase.hpp  virPropertyContainerBase.hpp  virPropertySetBase.hpp
include/Core/Event/: lgcEventManager.hpp
include/Core/I18n/: lgcI18nManager.hpp
include/Core/Log/: lgcLogManager.hpp
include/Core/Plugin/: lgcPluginManager.hpp  virPluginBase.hpp
include/Core/Resource/: lgcResourceManager.hpp  virResourceBase.hpp
include/Core/Service/: lgcServiceManager.hpp  virServiceBase.hpp
include/Core/Task/: lgcCancellationToken.hpp  lgcTaskManager.hpp
include/Core/Ui/: lgcUiManager.hpp
include/Core/Utility/: lgcTime.hpp  lgcUuid.hpp
include/Data/: lgcAttribute.hpp  lgcAttributeGroup.hpp  lgcDataManager.hpp  lgcDocument.hpp  lgcElement.hpp  lgcElementGroup.hpp  lgcGroup.hpp  lgcProperty.hpp  lgcPropertyContainerMap.hpp  virContainerBase.hpp  virNodeBase.hpp  virNodeSetBase.hpp  virObjectBase.hpp  virProperty.hpp  virPropertyBase.hpp  virPropertyContainerBase.hpp  virPropertySetBase.hpp
include/Event/: lgcEventManager.hpp
include/I18n/: lgcI18nManager.hpp
include/Log/: lgcLogManager.hpp
include/Plugin/: lgcPluginManager.hpp  virPluginBase.hpp
include/Resource/: lgcResourceManager.hpp  virResourceBase.hpp
include/Service/: lgcServiceManager.hpp  virServiceBase.hpp
include/Task/: lgcCancellationToken.hpp  lgcTaskManager.hpp
include/Ui/: lgcUiManager.hpp
include/Utility/: lgcString.hpp  lgcUuid.hpp
src/: lgcCore.cpp
src/Command/: lgcCommandManager.cpp  lgcCompositeCommand.cpp
src/Config/: lgcConfigManager.cpp
src/Data/: lgcDataManager.cpp  lgcDocument.cpp  lgcElement.cpp  lgcElementGroup.cpp  lgcGroup.cpp  lgcProperty.cpp  lgcPropertyContainerMap.cpp  virDocumentBase.cpp  virNodeBase.cpp  virNodeSetBase.cpp  virPropertyBase.cpp  virPropertyContainerBase.cpp  virPropertySetBase.cpp
src/Event/: lgcEventManager.cpp
src/I18n/: lgcI18nManager.cpp
src/Log/: lgcLogManager.cpp
src/Plugin/: lgcPluginManager.cpp
src/Resource/: lgcResourceManager.cpp
src/Service/: lgcServiceManager.cpp
src/Task/: lgcCancellationToken.cpp  lgcTaskManager.cpp
src/Ui/: lgcUiManager.cpp
src/Utility/: lgcString.cpp  lgcTime.cpp  lgcUuid.cpp
